--- a/.github/workflows/openAPI.yml
+++ b/.github/workflows/openAPI.yml
@@ -1,12 +1,19 @@
-name: Generate Documentation
+name: OpenAPI Lint and Docs
 
 on:
   workflow_dispatch:
 
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  Lint:
+    runs-on: ubuntu-latest
+    steps:
+    - name: OpenAPI Lint Checks
+      uses: nwestfall/openapi-action@v1.0.1
+      with:
+        github_token: ${{ secrets.GHA_PAT }}
+        file: PapalIntentionAPI-Design.yaml
+
+  Update_Docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -30,4 +37,5 @@ jobs:
         with:
           github_token: ${{ secrets.GHA_PAT }}
           branch: ${{ github.ref }}
+          
 
